--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ entrypoints==0.4
 executing==0.8.3
 fastjsonschema==2.15.3
 Flask==2.1.2
+gunicorn==20.1.0
 importlib-metadata==4.11.3
 importlib-resources==5.7.1
 ipykernel==6.13.0
